--- a/src/components/user/styles.css
+++ b/src/components/user/styles.css
@@ -2,7 +2,7 @@
   background-color: #fff;
   border-radius: 10px;
   min-height: 50px;
-  padding: 10px 8px;
+  padding: 0px 0px 10px 0px;
 }
 #card-usuario-foto {
   height: 50px;
@@ -10,12 +10,15 @@
   font-weight: bold;
   background-color: blueviolet;
   border-radius: 10px;
+  margin-left: 20px;
 }
 #card-usuario {
   display: flex;
   flex-direction: row;
-  background-color: rgba(49, 182, 187, 0.767);
-  padding: 15px 3px;
+  background-color: #403caa;
+  padding: 20px 3px;
+  border-radius: 8px;
+  color: white;
 }
 
 #picture {
