--- a/src/components/Tech/styles.css
+++ b/src/components/Tech/styles.css
@@ -12,7 +12,9 @@
   border-radius: 5px;
   padding: 4px;
   height: 30px;
-  /* font-size: 10px; */
+  padding: 6px 9px;
+  color: white;
+  font-weight: bold;
 }
 
 #tech-title {
