--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -6,6 +6,16 @@
   width: 80%;
   margin: auto;
 }
+
+.tech-cards p {
+  padding: 5px 9px;
+  background-color: #e7f5ef;
+  border-radius: 5px;
+  border: none;
+  color: rgb(50, 150, 11);
+  font-weight: bold;
+}
+
 .tech-cards:hover {
   border-right: 4px solid green;
 }
@@ -28,13 +38,15 @@
 }
 
 .icons-works-cards {
-  padding: 5px;
+  padding: 10px;
   border-radius: 5px;
+  background-color: #403caa3b;
 }
 
 .icons-tech-cards {
-  padding: 5px;
+  padding: 10px;
   border-radius: 5px;
+  background-color: #e7f5ef;
 }
 
 .icons-works-cards:hover {
