chore - change style card register

--- a/src/components/Modals/Cadtech/style.css
+++ b/src/components/Modals/Cadtech/style.css
@@ -7,7 +7,7 @@
 .alterar {
   color: white;
   font-weight: bold;
-  background-color: var(--roxo);
+  background-color: var(--grenn);
   padding: 14px 29px;
   margin: 4px 3px;
   border-radius: 6px;
